apps/gatus/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gatus
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/enforce-version: latest
