apps/gatus/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: gatus
  namespace: gatus
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`gatus.pedrocoutinho.eu`)
      kind: Rule
      middlewares:
        - name: authelia
          namespace: traefik
      services:
        - name: gatus
          port: 8080
  tls:
    store:
      name: default
